Add callback, completion views

--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -19,3 +19,4 @@ ru:
       messages:
         blank: 'не может быть пустым'
         required: 'не указан(а)'
+        record_invalid: 'Возникли ошибки: %{errors}'
