--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,2 +1,45 @@
 ru:
   hello: 'Привет'
+
+  helpers:
+    submit:
+      test:
+        create: 'Создать тест'
+        update: 'Обновить тест'
+      question:
+        create: 'Создать вопрос'
+        update: 'Обновить вопрос'
+    label:
+      test:
+        title: 'Название'
+        level: 'Уровень'
+        category_id: 'Категория'
+      question:
+        body: 'Вопрос'
+
+  shared:
+    errors:
+      header:
+        few: "Обнаружено %{count} ошибки"
+        many: "Обнаружено %{count} ошибок"
+        one: "Обнаружена %{count} ошибка"
+        other: "Обнаружено %{count} ошибки"
+
+  tests:
+    index:
+      header: 'Доступные тесты'
+
+  test_passages:
+    result:
+      header: "Тест %{title} успешно завершён!"
+
+  admin:
+    tests:
+      index:
+        header: 'Доступные тесты'
+      create:
+        success: 'Тест успешно создан.'
+
+  tests_mailer:
+    completed_test:
+      subject: 'Вы успешно завершили тест на TestGuru!'
