--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,15 +57,46 @@ en:
   tests:
     index:
       header: 'Tricky tests'
+      title_test: 'Title'
+      level: 'Level'
+      quantity: 'Number of questions'
+    test:
+      start: 'Start'
+      test_levels:
+        easy: 'Easy'
+        elementary: 'Elementary'
+        advanced: 'Advanced'
+        hard: 'Hard'
+        hero: 'Hero'
 
   test_passages:
+    show:
+      passing_test: "Passing the %{test} Test"
+      question: 'Question:'
     result:
       header: "The %{title} test was completed!"
+      correct_answers: 'Сorrect answers:'
+      test_success: 'Test passed successfully.'
+      test_fail: 'Test failed.'
+      test_list: 'Test list'
 
   admin:
     tests:
+      form:
+        create_test: 'Create New Test'
+        edit_test: "Edit %{test_title} Test"
+      test:
+        show: 'Show'
+        edit: 'Edit'
+        delete: 'Delete'
+        delete_confirmation: 'Are you sure?'
       index:
         header: 'Tricky tests'
+        new_test: 'New test'
+        title_test: 'Title'
+        level: 'Level'
+        quantity: 'Number of questions'
+        actions: 'Actions'
       create:
         success: 'Test was successfully created.'
 
