--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,6 +2,8 @@ ru:
   hello: 'Привет'
 
   helpers:
+    select:
+      prompt: 'Выберите категорию'
     submit:
       test:
         create: 'Создать тест'
