--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -7,6 +7,13 @@ en:
     attributes:
       test:
         title: 'Title'
+      user:
+        email: 'Email'
+        password: 'Password'
+        first_name: 'First name'
+        last_name: 'Last name'
+        password_confirmation: 'Password confirmation'
+        remember_me: 'Remember me'
 
     errors:
       messages:
