--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -7,6 +7,13 @@ ru:
     attributes:
       test:
         title: 'Название'
+      user:
+        email: 'Email'
+        password: 'Пароль'
+        first_name: 'Имя'
+        last_name: 'Фамилия'
+        password_confirmation: 'Подтверждение пароля'
+        remember_me: 'Запомнить меня'
         
     errors:
       messages:
