--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -4,6 +4,8 @@ ru:
       confirmed: "Ваша учётная запись успешно подтверждена."
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
+      new:
+        resend_confirmation_instructions: "Выслать повторно письмо с активацией"
     failure:
       already_authenticated: "Вы уже вошли в систему."
       inactive: "Ваша учётная запись ещё не активирована."
@@ -35,6 +37,9 @@ ru:
       updated: "Ваш пароль успешно изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль успешно изменён."
     registrations:
+      new:
+        become_a_guru: "Стань Гуру"
+        sign_up: "Регистрация"
       destroyed: "До свидания! Ваша учётная запись успешно удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       signed_up_but_inactive: "Вы успешно зарегистрировались. Тем не менее, вы не можете войти, потому что ваша учетная запись ещё не активирована."
@@ -46,10 +51,20 @@ ru:
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
       already_signed_out: "Выход из системы выполнен."
+      new:
+        title: "Войдите в ворота Гуру"
+        enter: "Войти"
     unlocks:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по разблокировке вашей учётной записи."
       send_paranoid_instructions: "Если ваша учётная запись существует, то в течение нескольких минут вы получите письмо с инструкциями по её разблокировке."
       unlocked: "Ваша учётная запись разблокирована. Теперь вы вошли в систему."
+    shared:
+      links:
+        log_in: "Войти"
+        sign_up: "Регистрация"
+        didn_t_receive_confirmation_instructions: "Не получили подтверждение?"
+        didn_t_receive_unlock_instructions: "Не получили код разблокировки?"
+        forgot_your_password: "Забыли пароль?"
   errors:
     messages:
       already_confirmed: "уже подтверждена. Пожалуйста, попробуйте войти в систему"
