--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -19,6 +19,9 @@ ru:
     mailer:
       confirmation_instructions:
         subject: "Инструкции по подтверждению учётной записи."
+        greeting: "Здравствуйте, %{email}!"
+        instruction: "Вы можете активировать свою учетную запись, нажав ссылку снизу:"
+        confirm_my_account: "Подтвердить мой аккаунт"
       reset_password_instructions:
         subject: "Инструкции по восстановлению пароля."
       unlock_instructions:
@@ -40,6 +43,11 @@ ru:
       new:
         become_a_guru: "Стань Гуру"
         sign_up: "Регистрация"
+        minimum_password_length:
+          few: "(минимум %{count} знака)"
+          many: "(минимум %{count} знаков)"
+          one: "(минимум %{count} знак)"
+          other: "(минимум %{count} знаков)"
       destroyed: "До свидания! Ваша учётная запись успешно удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       signed_up_but_inactive: "Вы успешно зарегистрировались. Тем не менее, вы не можете войти, потому что ваша учетная запись ещё не активирована."
