--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -62,14 +62,13 @@ ru:
       new:
         title: "Войдите в ворота Гуру"
         enter: "Войти"
+        remember_me: "Запомнить меня"
     unlocks:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по разблокировке вашей учётной записи."
       send_paranoid_instructions: "Если ваша учётная запись существует, то в течение нескольких минут вы получите письмо с инструкциями по её разблокировке."
       unlocked: "Ваша учётная запись разблокирована. Теперь вы вошли в систему."
     shared:
       links:
-        log_in: "Войти"
-        sign_up: "Регистрация"
         didn_t_receive_confirmation_instructions: "Не получили подтверждение?"
         didn_t_receive_unlock_instructions: "Не получили код разблокировки?"
         forgot_your_password: "Забыли пароль?"
