--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -61,14 +61,13 @@ en:
       new:
         title: "Enter the Guru Gates"
         enter: "Enter"
+        remember_me: "Remember me"
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
     shared:
       links:
-        log_in: "Log in"
-        sign_up: "Sign up"
         didn_t_receive_confirmation_instructions: "Didn't receive confirmation instructions?"
         didn_t_receive_unlock_instructions: "Didn't receive unlock instructions?"
         forgot_your_password: "Forgot your password?"
