--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@
 
 en:
   hello_flash: "Hello, %{user_name}!"
+  welcome_html: "Welcome, <b>%{user_name}</b>!"
   easy: 'Easy'
   elementary: 'Elementary'
   advanced: 'Advanced'
@@ -60,6 +61,10 @@ en:
       header:
         one: "%{count} error detected"
         other: "%{count} errors detected"
+    nav:
+      log_in: 'Log in'
+      log_out: 'Log out'
+      sign_up: 'Sign up'
 
   tests:
     index:
