--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,6 @@
 ru:
   hello_flash: "Привет, %{user_name}!"
+  welcome_html: "Здравствуйте, <b>%{user_name}</b>!"
   easy: 'Легкий'
   elementary: 'Начальный'
   advanced: 'Продвинутый'
@@ -31,6 +32,10 @@ ru:
         many: "Обнаружено %{count} ошибок"
         one: "Обнаружена %{count} ошибка"
         other: "Обнаружено %{count} ошибки"
+    nav:
+      log_in: 'Войти'
+      log_out: 'Выйти'
+      sign_up: 'Регистрация'
 
   tests:
     index:
