--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,7 +30,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello_flash: "Hello, %{user_name}!"
+  hello_flash: "Hello, %{user_name}"
   welcome_html: "Welcome, <b>%{user_name}</b>!"
   easy: 'Easy'
   elementary: 'Elementary'
@@ -87,6 +87,8 @@ en:
       test_list: 'Test list'
 
   admin:
+    nav:
+      admin_panel: 'Admin Panel'
     tests:
       form:
         create_test: 'Create New Test'
