--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
       log_in: 'Log in'
       log_out: 'Log out'
       sign_up: 'Sign up'
+      admin_panel: 'Admin panel'
 
   tests:
     index:
