--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -36,6 +36,7 @@ ru:
       log_in: 'Войти'
       log_out: 'Выйти'
       sign_up: 'Регистрация'
+      admin_panel: 'Панель администратора'
 
   tests:
     index:
