Add link on created gist to flash message

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -59,7 +59,7 @@ ru:
       test_fail: 'Тест не пройден.'
       test_list: 'Список тестов'
     gist:
-      success: "Gist успешно сохранен!"
+      success: "Gist успешно сохранен! Ссылка на ваш gist: %{url}"
       failure: "Во время сохранения gist произошла ошибка"
 
   admin:
