--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,7 +87,7 @@ en:
       test_fail: 'Test failed.'
       test_list: 'Test list'
       gist:
-        success: "Gist was successfuly created!"
+        success: "Gist was successfuly created! Link to your gist: %{url} "
         failure: "Ann error occurred while saving gist"
 
   admin:
