--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -113,6 +113,8 @@ en:
         actions: 'Actions'
       create:
         success: 'Test was successfully created.'
+      form_inline:
+        submit: 'ОК'
     gists:
       index:
         question: 'Question'
