--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -85,6 +85,8 @@ ru:
         actions: 'Действия'
       create:
         success: 'Тест успешно создан.'
+      form_inline:
+        submit: 'ОК'
     gists:
       index:
         question: 'Вопрос'
